--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,15 +1,7 @@
-# Server settings
-server:
-  port: 8090
-  servlet:
-    context-path: /
-
 # Spring settings
 spring:
-  profiles:
-    active: dev
   datasource:
-    url: jdbc:h2:tcp://localhost/~/honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
+    url: jdbc:h2:mem:honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
     driverClassName: org.h2.Driver
     username: sa
     password:
@@ -20,11 +12,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
-      settings:
-        web-allow-others: true
 
 # Logging settings
 logging:
   level:
     root: info
-
