--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,7 @@
 # Spring settings
 spring:
+
+  # Datasource
   datasource:
     url: jdbc:h2:mem:honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
     driverClassName: org.h2.Driver
@@ -8,10 +10,22 @@ spring:
     sql-script-encoding: UTF-8
     schema: classpath:db/h2/${spring.profiles.active}/schema*.sql
     data: classpath:db/h2/${spring.profiles.active}/data*.sql
+
+  # H2
   h2:
     console:
       enabled: true
       path: /h2-console
+
+  # JPA
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
 
 # Logging settings
 logging:
