--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,13 @@ repositories {
 dependencies {
     // Spring boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // H2
+    runtimeOnly 'com.h2database:h2:2.1.212'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
