Feature/kakao login (#5)
* Add properties about kakao OAuth and create this properties in record type

* Add thymeleaf dependency and Create web UI for kakao login test request

* Add enpoints that handles kakao login redirect request

* Add spring-webflux dependency to use the WebClient and Set up WebClient configuration

* Implement funtion that kakao login access token issuance

* Add properties about kakao user property

* TDD: Test correct properties binding for KakaoProperties record

* Add models about kakao user-info and Call kakao api for get user-info

* Modify kakao login api response to return logged user's kakao account-info

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -27,6 +27,15 @@ spring:
         format_sql: true
         use_sql_comments: true
 
+  # Console Output
+  output:
+    ansi:
+      enabled: always
+
+  # MVC
+  mvc:
+    log-request-details: true
+
 # Logging settings
 logging:
   level:
