--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -27,10 +27,24 @@ spring:
         format_sql: true
         use_sql_comments: true
 
+  # Console Output
+  output:
+    ansi:
+      enabled: always
+
+  # MVC
+  mvc:
+    log-request-details: true
+
 # Logging settings
 logging:
   level:
     root: info
+    com:
+      honeypot: debug
+    org:
+      springframework:
+        web: trace
 
 # OAuth
 oauth:
