--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,8 @@ spring:
 
   # Datasource
   datasource:
-    url: jdbc:h2:mem:honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
+    #url: jdbc:h2:mem:honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
+    url: jdbc:h2:tcp://localhost/~/honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
     driverClassName: org.h2.Driver
     username: sa
     password:
@@ -20,7 +21,7 @@ spring:
   # JPA
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
