--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
 }
 
 group 'com.honeypot'
-version '0.0.1'
-sourceCompatibility = '15'
+version '0.0.2'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
@@ -15,19 +15,36 @@ repositories {
 
 dependencies {
     // Spring boot
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    // Lombok
+    // H2
+    runtimeOnly 'com.h2database:h2:2.1.212'
+
+    // Mapstruct & Lombok
+    implementation 'org.mapstruct:mapstruct:1.5.1.Final'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
 }
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+compileJava {
+    options.compilerArgs += [
+            '-Amapstruct.suppressGeneratorTimestamp=true',
+            '-Amapstruct.suppressGeneratorVersionInfoComment=true',
+            '-Amapstruct.verbose=true'
+    ]
 }
 
 test {
