--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,39 @@ server:
   servlet:
     context-path: /
 
+# Spring settings
+spring:
+  profiles:
+    active: dev
+
+  # Datasource
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/honeypot;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+    sql-script-encoding: UTF-8
+    schema: classpath:db/h2/${spring.profiles.active}/schema*.sql
+    data: classpath:db/h2/${spring.profiles.active}/data*.sql
+
+  # H2
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
+
+  # JPA
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+
 # Logging settings
 logging:
   level:
