--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     // H2
     runtimeOnly 'com.h2database:h2:2.1.212'
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     // Mapstruct & Lombok
     implementation 'org.mapstruct:mapstruct:1.5.1.Final'
     compileOnly 'org.projectlombok:lombok'
