TDD: Add api endpont for change member's nickname with controller layer slice test

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-inline:4.6.1'
 }
 
 configurations {
