TDD: Improve test coverage for 'AuthApi' (4.5% → 100%)

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -69,3 +69,10 @@ jwt:
   expiration-time-in-seconds:
     access-token: 86400
     refresh-token: 604800
+
+# Client
+domain:
+  server:
+    domain-name: ".honeypots.kr"
+  client:
+    web: "https://www.honeypots.kr"
