--- a/prometheus.yml
+++ b/prometheus.yml
@@ -17,4 +17,4 @@ scrape_configs:
     follow_redirects: true
     static_configs:
       - targets:
-          - 'api.honeypots.kr'
+          - 'host.docker.internal:8090'
