Add awaitility library dependency for test asynchronous features

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     // fcm
     implementation 'com.google.firebase:firebase-admin:8.2.0'
 
+    // Awaitility
+    testImplementation 'org.awaitility:awaitility:4.2.0'
+
     // Mapstruct & Lombok
     implementation 'org.mapstruct:mapstruct:1.5.1.Final'
     compileOnly 'org.projectlombok:lombok'
