--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,12 @@ dependencies {
     // json-simple
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
+    // fcm
+    implementation 'com.google.firebase:firebase-admin:8.2.0'
+
+    // Awaitility
+    testImplementation 'org.awaitility:awaitility:4.2.0'
+
     // Mapstruct & Lombok
     implementation 'org.mapstruct:mapstruct:1.5.1.Final'
     compileOnly 'org.projectlombok:lombok'
